pytorch without cuda added!

--- a/compose/local/Dockerfile
+++ b/compose/local/Dockerfile
@@ -42,6 +42,11 @@ RUN apt-get update \
 COPY ./requirements /requirements
 RUN pip install -r /requirements/local.txt
 
+# PyTorch without CUDA you can change it into what types, you want
+RUN pip install torch==1.6.0+cpu torchvision==0.7.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+
+
+
 COPY ./compose/local/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
 RUN chmod +x /entrypoint
