--- a/compose/production/Dockerfile
+++ b/compose/production/Dockerfile
@@ -42,6 +42,9 @@ RUN apt-get update \
 COPY ./requirements /requirements
 RUN pip install -r /requirements/production.txt
 
+# PyTorch without CUDA you can change it into what types, you want
+RUN pip install torch==1.6.0+cpu torchvision==0.7.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+
 COPY ./compose/production/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
 RUN chmod +x /entrypoint
