--- a/production.yml
+++ b/production.yml
@@ -44,9 +44,9 @@ services:
       - proxy
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`albert-lab-traefik.m3hrdadfi.com`)"
+      - "traefik.http.routers.api.rule=Host(`traefik.example.com`)"
       - "traefik.http.routers.api.entrypoints=web"
-      - "traefik.http.routers.api-secured.rule=Host(`albert-lab-traefik.m3hrdadfi.com`)"
+      - "traefik.http.routers.api-secured.rule=Host(`traefik.example.com`)"
       - "traefik.http.routers.api-secured.entrypoints=web-secured"
       - "traefik.http.routers.api.service=api@internal" # Let the dashboard access the traefik api
       - "traefik.http.routers.api.middlewares=api-auth"
@@ -68,9 +68,9 @@ services:
     command: /start
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.streamlit.rule=Host(`albert-lab.m3hrdadfi.com`)"
+      - "traefik.http.routers.streamlit.rule=Host(`albert.example.com`)"
       - "traefik.http.routers.streamlit.entrypoints=web"
-      - "traefik.http.routers.streamlit-secured.rule=Host(`albert-lab.m3hrdadfi.com`)"
+      - "traefik.http.routers.streamlit-secured.rule=Host(`albert.example.com`)"
       - "traefik.http.routers.streamlit-secured.entrypoints=web-secured"
       - "traefik.http.routers.streamlit-secured.tls.certresolver=le"
       - "traefik.http.services.streamlit.loadbalancer.server.port=8501" # it seems you always need to give traefik a port so it 'notices' the service
